VoyagerParser.py
# Generated from Voyager.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class VoyagerParser ( Parser ):

    grammarFileName = "Voyager.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'verdadero'", "'falso'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "VERDADERO", 
                      "FALSO", "FUNC", "VAR", "IMPRIMIR", "SI", "SINO", 
                      "ENTERO", "CHAR", "FLOTANTE", "TEXTO", "BOOL", "VACIO", 
                      "REGRESA", "MIENTRAS", "ABRE_PAREN", "CIERRA_PAREN", 
                      "ABRE_BRACKET", "CIERRA_BRACKET", "ABRE_CORCHETE", 
                      "CIERRA_CORCHETE", "SEMI_COLON", "DOUBLE_DOT", "DOT", 
                      "COMA", "SUMA", "RESTA", "DIV", "MULT", "IGUAL", "MAS_QUE", 
                      "MENOS_QUE", "AND", "OR", "IGUAL_IGUAL", "DIFERENTE_DE", 
                      "LETRERO", "CTE_E", "CTE_F", "CTE_C", "CTE_B", "PROGRAMA", 
                      "ID", "WS" ]

    RULE_voyager = 0
    RULE_program = 1
    RULE_bloqueprogram = 2
    RULE_bloque1 = 3
    RULE_bloque2 = 4
    RULE_bloque3 = 5
    RULE_func = 6
    RULE_parametros = 7
    RULE_bloquefunc1 = 8
    RULE_typefunc = 9
    RULE_bloquefunc = 10
    RULE_bloque = 11
    RULE_afterDeclaracion = 12
    RULE_vector = 13
    RULE_estatuto = 14
    RULE_asignacion = 15
    RULE_idvector_asigna = 16
    RULE_condicion = 17
    RULE_condicion1 = 18
    RULE_declaracion = 19
    RULE_idvector = 20
    RULE_imprimir = 21
    RULE_imprimir1 = 22
    RULE_ciclo = 23
    RULE_llamada = 24
    RULE_argumentos = 25
    RULE_terminaArg = 26
    RULE_expresion = 27
    RULE_expresion1 = 28
    RULE_expbool = 29
    RULE_expbool1 = 30
    RULE_exp = 31
    RULE_exp1 = 32
    RULE_termino = 33
    RULE_termino2 = 34
    RULE_factor = 35
    RULE_operando = 36
    RULE_vector_acceso = 37
    RULE_acceso_afterExp = 38
    RULE_tipo = 39
    RULE_lee_condicion = 40
    RULE_verifica_tipo = 41
    RULE_sig_argumento = 42
    RULE_mete_tipo = 43
    RULE_mete_id = 44

    ruleNames =  [ "voyager", "program", "bloqueprogram", "bloque1", "bloque2", 
                   "bloque3", "func", "parametros", "bloquefunc1", "typefunc", 
                   "bloquefunc", "bloque", "afterDeclaracion", "vector", 
                   "estatuto", "asignacion", "idvector_asigna", "condicion", 
                   "condicion1", "declaracion", "idvector", "imprimir", 
                   "imprimir1", "ciclo", "llamada", "argumentos", "terminaArg", 
                   "expresion", "expresion1", "expbool", "expbool1", "exp", 
                   "exp1", "termino", "termino2", "factor", "operando", 
                   "vector_acceso", "acceso_afterExp", "tipo", "lee_condicion", 
                   "verifica_tipo", "sig_argumento", "mete_tipo", "mete_id" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    VERDADERO=3
    FALSO=4
    FUNC=5
    VAR=6
    IMPRIMIR=7
    SI=8
    SINO=9
    ENTERO=10
    CHAR=11
    FLOTANTE=12
    TEXTO=13
    BOOL=14
    VACIO=15
    REGRESA=16
    MIENTRAS=17
    ABRE_PAREN=18
    CIERRA_PAREN=19
    ABRE_BRACKET=20
    CIERRA_BRACKET=21
    ABRE_CORCHETE=22
    CIERRA_CORCHETE=23
    SEMI_COLON=24
    DOUBLE_DOT=25
    DOT=26
    COMA=27
    SUMA=28
    RESTA=29
    DIV=30
    MULT=31
    IGUAL=32
    MAS_QUE=33
    MENOS_QUE=34
    AND=35
    OR=36
    IGUAL_IGUAL=37
    DIFERENTE_DE=38
    LETRERO=39
    CTE_E=40
    CTE_F=41
    CTE_C=42
    CTE_B=43
    PROGRAMA=44
    ID=45
    WS=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class VoyagerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(VoyagerParser.EOF, 0)

        def program(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VoyagerParser.ProgramContext)
            else:
                return self.getTypedRuleContext(VoyagerParser.ProgramContext,i)


        def getRuleIndex(self):
            return VoyagerParser.RULE_voyager

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVoyager" ):
                listener.enterVoyager(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVoyager" ):
                listener.exitVoyager(self)




    def voyager(self):

        localctx = VoyagerParser.VoyagerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_voyager)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 90
                self.program()
                self.state = 93 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==VoyagerParser.PROGRAMA):
                    break

            self.state = 95
            self.match(VoyagerParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAMA(self):
            return self.getToken(VoyagerParser.PROGRAMA, 0)

        def bloqueprogram(self):
            return self.getTypedRuleContext(VoyagerParser.BloqueprogramContext,0)


        def getRuleIndex(self):
            return VoyagerParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = VoyagerParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(VoyagerParser.PROGRAMA)
            self.state = 98
            self.bloqueprogram()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BloqueprogramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ABRE_BRACKET(self):
            return self.getToken(VoyagerParser.ABRE_BRACKET, 0)

        def bloque2(self):
            return self.getTypedRuleContext(VoyagerParser.Bloque2Context,0)


        def bloque3(self):
            return self.getTypedRuleContext(VoyagerParser.Bloque3Context,0)


        def func(self):
            return self.getTypedRuleContext(VoyagerParser.FuncContext,0)


        def CIERRA_BRACKET(self):
            return self.getToken(VoyagerParser.CIERRA_BRACKET, 0)

        def getRuleIndex(self):
            return VoyagerParser.RULE_bloqueprogram

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloqueprogram" ):
                listener.enterBloqueprogram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloqueprogram" ):
                listener.exitBloqueprogram(self)




    def bloqueprogram(self):

        localctx = VoyagerParser.BloqueprogramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_bloqueprogram)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(VoyagerParser.ABRE_BRACKET)
            self.state = 101
            self.bloque2()
            self.state = 102
            self.bloque3()
            self.state = 103
            self.func()
            self.state = 104
            self.match(VoyagerParser.CIERRA_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Bloque1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def estatuto(self):
            return self.getTypedRuleContext(VoyagerParser.EstatutoContext,0)


        def bloque1(self):
            return self.getTypedRuleContext(VoyagerParser.Bloque1Context,0)


        def getRuleIndex(self):
            return VoyagerParser.RULE_bloque1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque1" ):
                listener.enterBloque1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque1" ):
                listener.exitBloque1(self)




    def bloque1(self):

        localctx = VoyagerParser.Bloque1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bloque1)
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [VoyagerParser.IMPRIMIR, VoyagerParser.SI, VoyagerParser.MIENTRAS, VoyagerParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.estatuto()
                self.state = 107
                self.bloque1()
                pass
            elif token in [VoyagerParser.REGRESA, VoyagerParser.CIERRA_BRACKET]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Bloque2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracion(self):
            return self.getTypedRuleContext(VoyagerParser.DeclaracionContext,0)


        def bloque2(self):
            return self.getTypedRuleContext(VoyagerParser.Bloque2Context,0)


        def getRuleIndex(self):
            return VoyagerParser.RULE_bloque2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque2" ):
                listener.enterBloque2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque2" ):
                listener.exitBloque2(self)




    def bloque2(self):

        localctx = VoyagerParser.Bloque2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_bloque2)
        try:
            self.state = 116
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [VoyagerParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.declaracion()
                self.state = 113
                self.bloque2()
                pass
            elif token in [VoyagerParser.IMPRIMIR, VoyagerParser.SI, VoyagerParser.ENTERO, VoyagerParser.CHAR, VoyagerParser.FLOTANTE, VoyagerParser.BOOL, VoyagerParser.VACIO, VoyagerParser.REGRESA, VoyagerParser.MIENTRAS, VoyagerParser.CIERRA_BRACKET, VoyagerParser.ID]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Bloque3Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func(self):
            return self.getTypedRuleContext(VoyagerParser.FuncContext,0)


        def bloque3(self):
            return self.getTypedRuleContext(VoyagerParser.Bloque3Context,0)


        def getRuleIndex(self):
            return VoyagerParser.RULE_bloque3

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque3" ):
                listener.enterBloque3(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque3" ):
                listener.exitBloque3(self)




    def bloque3(self):

        localctx = VoyagerParser.Bloque3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_bloque3)
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.func()
                self.state = 119
                self.bloque3()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typefunc(self):
            return self.getTypedRuleContext(VoyagerParser.TypefuncContext,0)


        def ID(self):
            return self.getToken(VoyagerParser.ID, 0)

        def ABRE_PAREN(self):
            return self.getToken(VoyagerParser.ABRE_PAREN, 0)

        def parametros(self):
            return self.getTypedRuleContext(VoyagerParser.ParametrosContext,0)


        def CIERRA_PAREN(self):
            return self.getToken(VoyagerParser.CIERRA_PAREN, 0)

        def bloquefunc(self):
            return self.getTypedRuleContext(VoyagerParser.BloquefuncContext,0)


        def getRuleIndex(self):
            return VoyagerParser.RULE_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc" ):
                listener.enterFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc" ):
                listener.exitFunc(self)




    def func(self):

        localctx = VoyagerParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_func)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.typefunc()
            self.state = 125
            self.match(VoyagerParser.ID)
            self.state = 126
            self.match(VoyagerParser.ABRE_PAREN)
            self.state = 127
            self.parametros()
            self.state = 128
            self.match(VoyagerParser.CIERRA_PAREN)
            self.state = 129
            self.bloquefunc()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParametrosContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VoyagerParser.TipoContext)
            else:
                return self.getTypedRuleContext(VoyagerParser.TipoContext,i)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(VoyagerParser.ID)
            else:
                return self.getToken(VoyagerParser.ID, i)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(VoyagerParser.COMA)
            else:
                return self.getToken(VoyagerParser.COMA, i)

        def getRuleIndex(self):
            return VoyagerParser.RULE_parametros

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametros" ):
                listener.enterParametros(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametros" ):
                listener.exitParametros(self)




    def parametros(self):

        localctx = VoyagerParser.ParametrosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parametros)
        self._la = 0 # Token type
        try:
            self.state = 143
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [VoyagerParser.ENTERO, VoyagerParser.CHAR, VoyagerParser.FLOTANTE, VoyagerParser.BOOL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.tipo()
                self.state = 132
                self.match(VoyagerParser.ID)
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==VoyagerParser.COMA:
                    self.state = 133
                    self.match(VoyagerParser.COMA)
                    self.state = 134
                    self.tipo()
                    self.state = 135
                    self.match(VoyagerParser.ID)
                    self.state = 141
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [VoyagerParser.CIERRA_PAREN]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Bloquefunc1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REGRESA(self):
            return self.getToken(VoyagerParser.REGRESA, 0)

        def expresion(self):
            return self.getTypedRuleContext(VoyagerParser.ExpresionContext,0)


        def SEMI_COLON(self):
            return self.getToken(VoyagerParser.SEMI_COLON, 0)

        def getRuleIndex(self):
            return VoyagerParser.RULE_bloquefunc1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloquefunc1" ):
                listener.enterBloquefunc1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloquefunc1" ):
                listener.exitBloquefunc1(self)




    def bloquefunc1(self):

        localctx = VoyagerParser.Bloquefunc1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_bloquefunc1)
        try:
            self.state = 150
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [VoyagerParser.REGRESA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.match(VoyagerParser.REGRESA)
                self.state = 146
                self.expresion()
                self.state = 147
                self.match(VoyagerParser.SEMI_COLON)
                pass
            elif token in [VoyagerParser.CIERRA_BRACKET]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypefuncContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(VoyagerParser.TipoContext,0)


        def VACIO(self):
            return self.getToken(VoyagerParser.VACIO, 0)

        def getRuleIndex(self):
            return VoyagerParser.RULE_typefunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypefunc" ):
                listener.enterTypefunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypefunc" ):
                listener.exitTypefunc(self)




    def typefunc(self):

        localctx = VoyagerParser.TypefuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_typefunc)
        try:
            self.state = 154
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [VoyagerParser.ENTERO, VoyagerParser.CHAR, VoyagerParser.FLOTANTE, VoyagerParser.BOOL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.tipo()
                pass
            elif token in [VoyagerParser.VACIO]:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.match(VoyagerParser.VACIO)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BloquefuncContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ABRE_BRACKET(self):
            return self.getToken(VoyagerParser.ABRE_BRACKET, 0)

        def bloque2(self):
            return self.getTypedRuleContext(VoyagerParser.Bloque2Context,0)


        def afterDeclaracion(self):
            return self.getTypedRuleContext(VoyagerParser.AfterDeclaracionContext,0)


        def bloque1(self):
            return self.getTypedRuleContext(VoyagerParser.Bloque1Context,0)


        def bloquefunc1(self):
            return self.getTypedRuleContext(VoyagerParser.Bloquefunc1Context,0)


        def CIERRA_BRACKET(self):
            return self.getToken(VoyagerParser.CIERRA_BRACKET, 0)

        def getRuleIndex(self):
            return VoyagerParser.RULE_bloquefunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloquefunc" ):
                listener.enterBloquefunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloquefunc" ):
                listener.exitBloquefunc(self)




    def bloquefunc(self):

        localctx = VoyagerParser.BloquefuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_bloquefunc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(VoyagerParser.ABRE_BRACKET)
            self.state = 157
            self.bloque2()
            self.state = 158
            self.afterDeclaracion()
            self.state = 159
            self.bloque1()
            self.state = 160
            self.bloquefunc1()
            self.state = 161
            self.match(VoyagerParser.CIERRA_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BloqueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ABRE_BRACKET(self):
            return self.getToken(VoyagerParser.ABRE_BRACKET, 0)

        def bloque1(self):
            return self.getTypedRuleContext(VoyagerParser.Bloque1Context,0)


        def CIERRA_BRACKET(self):
            return self.getToken(VoyagerParser.CIERRA_BRACKET, 0)

        def getRuleIndex(self):
            return VoyagerParser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)




    def bloque(self):

        localctx = VoyagerParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_bloque)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.match(VoyagerParser.ABRE_BRACKET)
            self.state = 164
            self.bloque1()
            self.state = 165
            self.match(VoyagerParser.CIERRA_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AfterDeclaracionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return VoyagerParser.RULE_afterDeclaracion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAfterDeclaracion" ):
                listener.enterAfterDeclaracion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAfterDeclaracion" ):
                listener.exitAfterDeclaracion(self)




    def afterDeclaracion(self):

        localctx = VoyagerParser.AfterDeclaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_afterDeclaracion)
        try:
            self.enterOuterAlt(localctx, 1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VectorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(VoyagerParser.ID, 0)

        def ABRE_CORCHETE(self):
            return self.getToken(VoyagerParser.ABRE_CORCHETE, 0)

        def CTE_E(self):
            return self.getToken(VoyagerParser.CTE_E, 0)

        def CIERRA_CORCHETE(self):
            return self.getToken(VoyagerParser.CIERRA_CORCHETE, 0)

        def getRuleIndex(self):
            return VoyagerParser.RULE_vector

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVector" ):
                listener.enterVector(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVector" ):
                listener.exitVector(self)




    def vector(self):
